--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,15 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "anthropic>=0.76.0",
+    "asyncio>=4.0.0",
+    "dotenv>=0.9.9",
+    "google>=3.0.0",
+    "google-genai>=1.59.0",
+    "instructor>=1.14.4",
+    "litellm>=1.81.1",
     "numpy>=2.2.6",
+    "openai>=2.15.0",
+    "pydantic>=2.12.5",
+    "tenacity>=9.1.2",
 ]
