--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "litellm>=1.81.1",
     "numpy>=2.2.6",
     "openai>=2.15.0",
+    "pre-commit>=4.5.1",
     "pydantic>=2.12.5",
     "tenacity>=9.1.2",
 ]
