Complete homework 3: Lexical Search

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,12 @@ dependencies = [
     "google-genai>=1.59.0",
     "instructor>=1.14.4",
     "litellm>=1.81.1",
+    "matplotlib>=3.10.8",
     "numpy>=2.2.6",
     "openai>=2.15.0",
+    "pandas>=2.3.3",
     "pre-commit>=4.5.1",
     "pydantic>=2.12.5",
+    "pystemmer>=3.0.0",
     "tenacity>=9.1.2",
 ]
